<resources>
    <string name="app_name">Right Here Right Now</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_create_post">Create Post</string>
    <string name="action_create_event">Create Event</string>
    <string name="action_create_message">Type Message</string>
    <string name="na">N/A</string>
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="display_name">Display Name*</string>
    <string name="handle">Handle* (@handle)</string>
    <string name="prompt_phone">Phone (Optional)</string>
    <string name="prompt_address">Address (Optional)</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="error_invalid_password">Incorrect Password. Please try again.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="facebook_app_id">1862159977386608</string>
    <string name="error_signin">Error logging in.</string>
    <string name="forgot_password">Forgot?</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="zipcode">Zip*</string>
    <string name="forgot_password_description">Forgot your password? Don\'t worry, we can help.</string>
    <string name="enter_password">Enter Email</string>
    <string name="event_rsvp_not_going">Not Going</string>
    <string name="event_rsvp_maybe">Maybe</string>
    <string name="event_rsvp_going">Going</string>
    <string name="event_name">Event Name</string>
    <string name="event_name_box">Add a Short, Clear Name</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_end_date">" End Date "</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_time">" End Time "</string>
    <string name="event_address">Address</string>
    <string name="event_private">Private Event</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="event_description_box">description goes here</string>
    <string name="event_button">Create Event</string>
    <string name="dateEvent">00/00/00</string>
    <string name="timeEvent">00:00</string>
    <string name="addressEvent">address</string>
    <string name="event_time_divider">-</string>
    <string name="post_button">Post</string>
    <string name="post_content_text">Enter Post Text Here</string>
    <string name="Anon_label">Anonymous</string>
    <string name="invite_only">Invite Only</string>
    <string name="following_only">Following Only</string>
    <string name="distance">Distance</string>
    <string name="Amount">Amount</string>
    <string name="Events">Events</string>
    <string name="Posts">Posts</string>
    <string name="Time">Time</string>
    <string name="Type">Event Type</string>
    <string name="new_message">New Message</string>
    <string name="new_message_content">Enter Message Here</string>
    <string name="send_message">Send</string>
    <string name="to">To:</string>
    <string name="send_to">\@username</string>
    <string name="about_me">About Me</string>
    <string name="done_edit">Done</string>
    <string name="about_me_content">About Me...</string>
    <string name="following">Notifications</string>
    <string name="you">Following</string>
    <string name="search_friends">Search</string>
    <string name="global">Global</string>
    <string name="city">City</string>
    <string name="trending">Trending</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_comment">Enter comment here</string>
    <string name="new_comment">New Comment</string>
    <string name="reply">Reply</string>
    <string name="like">Like</string>
    <string name="cancel">Cancel</string>
    <string name="almost_done">You are almost done! Add the following to complete your profile.</string>
    <string name="logout">Logout</string>
    <string name="filter1">Education</string>
    <string name="filter2">Sports</string>
    <string name="filter3">Party</string>
    <string name="filter4">Club Event</string>
    <string name="filter5">Other</string>
    <string name="done_filter">Done</string>
    <string name="choose_filter">Choose Type</string>
    <string name="filterByHandle">Choose User</string>
    <string name="event_type">Event Type</string>
    <string name="view_event_content">Event Content...</string>
    <string name="refresh">Refresh</string>
    <string name="comments_section">Comments</string>
    <string name="hyperlocale">HyperLocale List</string>
    <string name="map_event">Events</string>
    <string name="DeletePost">Delete Post</string>
    <string name="ReportPost">Report This Post</string>
    <string name="DeleteEvent">Delete This Event</string>
    <string name="ReportEvent">Report This Event</string>
    <string name="title_activity_filter_city">FilterCityActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="finish">Finish</string>
</resources>