<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter1"
        android:title="@string/filter1"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
    <item
        android:id="@+id/filter2"
        android:title="@string/filter2"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
    <item
        android:id="@+id/filter3"
        android:title="@string/filter3"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
    <item
        android:id="@+id/filter4"
        android:title="@string/filter4"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
    <item
        android:id="@+id/filter5"
        android:title="@string/filter5"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
    <item
        android:id="@+id/done_filter"
        android:title="@string/done_filter"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="true"
        />


</menu>