<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rhrn.RightHereRightNow.AlmostDoneActivity">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/rhrnlogo1" />
    <TextView
        android:id="@+id/profile_name_main"
        android:layout_width="266dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline" />

    <TextView
        android:layout_width="325dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/almost_done"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/displayName"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:hint="@string/display_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/handle1"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:hint="@string/handle"
        android:layout_below="@+id/displayName"
        android:layout_alignEnd="@+id/displayName"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:hint="@string/prompt_phone"
        android:layout_below="@+id/handle1"
        android:layout_alignParentStart="true"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/done_profile"
        android:text="@string/done_edit"
        android:layout_width="377dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        tools:layout_editor_absoluteY="515dp"
        tools:layout_editor_absoluteX="4dp" />

</LinearLayout>
