<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rhrn.RightHereRightNow.RegisterActivity">


        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="39dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/first_name"
            android:layout_alignEnd="@+id/first_name" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/last_name"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/register_email"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_city"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignBottom="@+id/register_state"
            android:layout_marginBottom="51dp"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_address"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_above="@+id/register_city"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_state"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="107dp"
            android:layout_below="@+id/register_password"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/register_phone"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/register"
            android:text="@string/action_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_city"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>