<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rhrn.RightHereRightNow.ForgotPasswordActivity"
    android:weightSum="1">

    <ImageView
        android:layout_height="130dp"
        app:srcCompat="@drawable/rhrnlogo1"
        android:id="@+id/app_name"
        android:layout_gravity="center"
        android:layout_width="160dp"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/forgot_password_description"
        android:text="@string/forgot_password_description"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />
    <EditText
        android:id="@+id/enter_password"
        android:hint="@string/enter_password"
        android:textSize="17sp"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_weight="0.02" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/send_message" />

        <Button
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
