<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/AnonBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.82"
            android:text="@string/Anon_label" />

        <Button
            android:id="@+id/confirm_post_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.74"
            android:text="@string/post_button" />
    </LinearLayout>

    <EditText
        android:id="@+id/content_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/post_content_text"
        android:gravity="top"/>


</LinearLayout>