<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rhrn.RightHereRightNow.RegisterActivity">

        <include layout="@layout/register_bar"
            android:id="@+id/reg_bar"></include>
        <!--LOGO-->
        <ImageView
            android:id="@+id/app_name"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/reg_bar"
            app:srcCompat="@drawable/rhrnlogo"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/profile_name_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_below="@id/app_name"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />


        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/first_name"
            android:background="@drawable/shaded_edittext"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/profile_name_main"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/last_name"
            android:background="@drawable/shaded_edittext"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/first_name"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/display_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/display_name"
            android:background="@drawable/shaded_edittext"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/last_name"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/hashtag"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shaded_edittext"
            android:maxLines="1"
            android:hint="@string/handle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/display_name"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shaded_edittext"
            android:hint="@string/prompt_phone"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/hashtag"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:background="@drawable/shaded_edittext"
            android:layout_height="35dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/register_email"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_city"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shaded_edittext"
            android:hint="@string/prompt_city"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/register_password"
            android:layout_alignParentEnd="true" />


        <EditText
            android:id="@+id/register_state"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shaded_edittext"
            android:hint="@string/prompt_state"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/register_city"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shaded_edittext"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/register_phone"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/register"
            android:background="@drawable/button_with_border"
            android:text="@string/action_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/register_state"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>