<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Events"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/invite_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invite_only" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ev_filter_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.44"
            android:text="@string/Time"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <SeekBar
            android:id="@+id/ev_time_bar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.67"
            android:max="100"
            android:progress="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ev_filter_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/distance"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <SeekBar
            android:id="@+id/ev_dist_bar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:max="100"
            android:progress="30" />
    </LinearLayout>

</LinearLayout>